# uitWiki-chatbot-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  RAG.py  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: main.py
app/api/routes/: chat_bot.py  marker.py  pinecone.py  query_router.py  redis.py
app/core/: HFembeddings.py  auth.py  chain_process.py  config.py  create_contextual_chunk.py  database.py  embeddings_model.py  huggingface.py  llm_model.py  markdown_chunking.py  process_pdf.py  process_pdf_v2.py  retriever.py
app/services/: RAG.py  pinecone_service.py  rag_service.py  s3_service.py
app/static/output/QuydinhKLTN_metadata/: QuydinhKLTN_metadata.md  QuydinhKLTN_metadata_meta.json
app/static/output/ctđt_tmđt_2021/: ctđt_tmđt_2021.md  ctđt_tmđt_2021_meta.json
app/static/output/danhmucmonhoc/: danhmucmonhoc.md
app/static/output/kenhthongtingiuanhatruongvasinhvien/: kenhthongtingiuanhatruongvasinhvien.md
faiss_index/: index.faiss  index.pkl
project_modules/ChainProcess/: chain_process.py
project_modules/EmbeddingsModel/: Embeddingsmodel.py
project_modules/LlmModel/: llmModel.py
server/: app.py
server/config/: database.py  env.py
server/models/: post.py
server/routes/: post.py
tests/: eval.py  metrics.py  metrics_summary.json  questions.csv  ragas_metrics.py  results.csv  results_evaluation.csv  test_eval.py  test_questions.py
tests/questions_storage/: question21.csv  questions110.csv  questions252.csv  questions70.csv
