[project]
name = "uitwiki-chatbot"
version = "0.1.0"
description = "uitWiki Chatbot Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autopep8>=2.3.1",
    "faiss-cpu>=1.8.0.post1",
    "fastapi[standard]>=0.115.0",
    "google-generativeai==0.7.2",
    "langchain-community>=0.3.1",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain>=0.3.1",
    "motor==3.6.0",
    "pre-commit>=3.8.0",
    "pydantic-settings>=2.5.2",
    "pymongo==4.9.1",
    "pypdf2>=3.0.1",
    "redis>=5.1.1",
]

