[project]
name = "uitwiki-chatbot"
version = "0.1.0"
description = "uitWiki Chatbot Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "autopep8>=2.3.1",
    "fastapi[standard]>=0.115.0",
    "google-generativeai==0.7.2",
    "langchain-community>=0.3.1",
    "langchain-google-genai>=2.0.0",
    "langchain-openai>=0.2.8",
    "langchain-pinecone>=0.2.0",
    "langchain>=0.3.1",
    "lark>=1.2.2",
    "motor==3.6.0",
    "pandas>=2.2.3",
    "pre-commit>=3.8.0",
    "pydantic-settings>=2.5.2",
    "pymongo==4.9.1",
    "redis>=5.1.1",
    "tqdm>=4.66.5",
    "voyageai>=0.3.1",
]

