[project]
name = "uitwiki-chatbot"
version = "0.1.0"
description = "uitWiki Chatbot Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "autopep8>=2.3.1",
    "bert-score>=0.3.13",
    "boto3>=1.35.55",
    "cohere>=5.11.4",
    "faiss-cpu>=1.8.0.post1",
    "fastapi[standard]>=0.115.0",
    "google-generativeai==0.7.2",
    "langchain-cohere>=0.3.3",
    "langchain-community>=0.3.1",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "langchain-openai>=0.2.8",
    "langchain-pinecone>=0.2.0",
    "langchain>=0.3.1",
    "lark>=1.2.2",
    "llama-parse>=0.5.14",
    "mangum>=0.19.0",
    "marker-pdf>=0.3.10",
    "motor==3.6.0",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pre-commit>=3.8.0",
    "pydantic-settings>=2.5.2",
    "pymongo==4.9.1",
    "pypdf2>=3.0.1",
    "pytest>=8.3.3",
    "redis>=5.1.1",
    "rouge>=1.0.1",
    "voyageai>=0.3.1",
]

